# IMAS-Data-Dictionaries

./: README.md  pyproject.toml  setup.py
imas_data_dictionaries/: __init__.py
